re PR ipa/63580 (ICE : error: invalid argument to gimple call)

PR ipa/63580
        * cgraphunit.c (cgraph_node::create_wrapper):
	TREE_ADDRESSABLE is set to false for a newly created thunk.
	* g++.dg/ipa/pr63580.C: New test.

From-SVN: r217222